[package]
name = "cargo-depcription"
description = "Transforms your rust project dependencies into an explicative dependency choice markdown table!"
authors = ["julien-cpsn"]
version = "0.1.2"
edition = "2024"
license = "MIT"
homepage = "https://github.com/Julien-cpsn/cargo-depcription"
documentation = "https://github.com/Julien-cpsn/cargo-depcription"
keywords = ["cargo", "description", "dependency", "dependencies"]

[dependencies]
# Serialization
## Deserialize toml manifests
toml_edit = { version = "0.22.27", features = ["serde"] }

# Output
## Transform dependencies to markdown table
to_markdown_table = "0.1.5"