[package]
name = "cargo-depcription"
description = "Transforms your rust project dependencies into an explicative dependency choice markdown table!"
authors = ["julien-cpsn"]
version = "0.2.5"
edition = "2024"
license = "MIT"
homepage = "https://github.com/Julien-cpsn/cargo-depcription"
documentation = "https://github.com/Julien-cpsn/cargo-depcription"
keywords = ["cargo", "description", "dependency", "dependencies"]

[dependencies]
# Serialization & Deserialization
## Deserialize toml manifests
##! Hidden comment
toml_edit = { version = "0.24.0", features = ["serde"] }
## Parse crates-io metadata
crates-io-metadata = { version = "0.1.1", features = ["scrap"] }

# Output
## Transform dependencies to markdown table
to_markdown_table = "0.1.5"

# Utils
## Generic errors
anyhow = "1.0.98"
## CLI parser
clap = { version = "4.5.53", features = ["derive"] }
clap-cargo = "0.18.3"
## Allow async function usage
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
## Lazy variables
once_cell = "1.21.3"